# projeto-cervona

./: .env.example  .gitignore  Dockerfile  ENTREGA.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: 01-decisoes-arquitetura.md  02-roadmap-detalhado.md  03-seguranca-lgpd.md  04-instalacao.md  05-deployment.md  06-api.md  07-arquitetura.md
frontend/: index.html
infra/: README.md  deploy.sh  main.bicep  main.bicepparam
infra/modules/: app-insights.bicep  budget.bicep  key-vault.bicep  managed-identity.bicep  postgresql.bicep  rbac.bicep  storage.bicep
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
src/agent/: extractor.py  prompts.py
src/api/: main.py
src/api/middleware/: auth.py
src/api/routes/: auth.py  extraction.py  health.py  sefaz.py  xml_capture.py
src/config/: database.py  logging.py  settings.py
src/models/: __init__.py  base.py  extracted_item.py  sefaz_sync_state.py  xml_document.py
src/sefaz/: client.py  mock.py  parser.py  service.py
src/services/: xml_pipeline.py
tests/: conftest.py
tests/unit/: test_agent_extractor.py  test_api_auth.py  test_api_extraction.py  test_api_health.py  test_api_main.py  test_api_sefaz.py  test_api_xml_capture.py  test_config_database.py  test_sefaz_client.py  test_sefaz_mock.py  test_sefaz_parser.py  test_sefaz_service.py
