[project]
name = "e-cernova-livro-caixa-rural"
version = "0.1.0"
description = "XML fiscal processing with AI extraction"
authors = [
    {name = "Fundação Azure", email = "dev@cernova.local"}
]
license = {text = "Proprietary"}
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"
